--- a/composer.json
+++ b/composer.json
@@ -2,21 +2,19 @@
     "name": "orba/magento2-payupl",
     "description": "Payu.pl integration for Magento 2",
     "require": {
-        "php": "~5.5.0|~5.6.0",
-        "magento/module-checkout": "1.0.0-beta",
-        "magento/module-payment": "1.0.0-beta",
-        "magento/framework": "1.0.0-beta",
-        "magento/magento-composer-installer": "*",
-        "openpayu/openpayu": "2.1.*"
+        "php": "~5.5.0|~5.6.0|~7.0.0",
+        "magento/module-checkout": "100.0.*",
+        "magento/module-payment": "100.0.*",
+        "magento/framework": "100.0.*",
+        "openpayu/openpayu": "2.1.*",
+        "magento/magento-composer-installer": "*"
     },
     "type": "magento2-module",
-    "version": "master",
-    "dist": {
-        "url": "git@github.com:ORBA/magento2_payupl.git",
-        "type": "git"
-    },
+    "version": "100.0.0-beta1",
     "autoload": {
-        "files": [ "registration.php" ],
+        "files": [
+            "registration.php"
+        ],
         "psr-4": {
             "Orba\\Payupl\\": ""
         }
