--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,13 @@
         "php": "~5.5.0|~5.6.0|~7.0.0",
         "magento/module-checkout": "100.0.*",
         "magento/module-payment": "100.0.*",
+        "magento/module-sales": "100.0.*",
         "magento/framework": "100.0.*",
         "openpayu/openpayu": "2.1.*",
         "magento/magento-composer-installer": "*"
     },
     "type": "magento2-module",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "autoload": {
         "files": [
             "registration.php"
