--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
         "magento/module-payment": "100.0.*",
         "magento/module-sales": "100.0.*",
         "magento/framework": "100.0.*",
-        "openpayu/openpayu": "2.1.*",
-        "magento/magento-composer-installer": "*"
+        "openpayu/openpayu": "2.1.*"
     },
     "type": "magento2-module",
     "version": "1.0.1",
