--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,15 @@
     "name": "orba/magento2-payupl",
     "description": "Payu.pl integration for Magento 2",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
-        "magento/module-checkout": "100.1.*",
-        "magento/module-payment": "100.1.*",
-        "magento/module-sales": "100.1.*",
-        "magento/framework": "100.1.*",
+        "php": "~7.0.0|~7.1.0",
+        "magento/module-checkout": "100.2.*",
+        "magento/module-payment": "100.2.*",
+        "magento/module-sales": "101.0.*",
+        "magento/framework": "101.0.*",
         "openpayu/openpayu": "2.2.*"
     },
     "type": "magento2-module",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "autoload": {
         "files": [
             "registration.php"
